[tool.poetry]
name = "pylang"
version = "0.1.0"
description = ""
authors = ["Michael Caley <mjcaley@darkarctic.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lark-parser = "^0.7.7"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
pytest-cov = "^2.6"
pytest-mock = "^1.10"

[tool.poetry.scripts]
test = 'pytest:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
